test: add unit tests for themeService